arc: Unblock managed user login during authentication

EDU is reqeusting more complicated flow/strings for the UMA notification
flow, in the mean time we should unblock enterprise login flow during
authentication when Arc is managed enabled.

Bug: 852816
Test: Manual with test enterprise account
Change-Id: I7c857685ba1be55e268377b29ef7dc426109cada
Reviewed-on: https://chromium-review.googlesource.com/1108497
Commit-Queue: Long Cheng <lgcheng@google.com>
Reviewed-by: Luis Hector Chavez <lhchavez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569328}